# SequenceTree

./: .gitignore  CLAUDE.md  CMakeLists.txt  SequenceTree.jucer
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: ColourSelector.cpp  ColourSelector.h  ColourWheel.cpp  ColourWheel.h  ComponentContext.h  Counter.h  CustomLookAndFeel.cpp  CustomLookAndFeel.h  DynamicEditor.cpp  DynamicEditor.h  DynamicField.cpp  DynamicField.h  DynamicLabel.cpp  DynamicLabel.h  DynamicPort.h  MenuItem.cpp  MenuItem.h  Node.cpp  Node.h  NodeArrow.cpp  NodeArrow.h  NodeBox.cpp  NodeBox.h  NodeCanvas.cpp  NodeCanvas.h  NodeController.cpp  NodeController.h  NodeData.cpp  NodeData.h  NodeLogic.cpp  NodeLogic.h  NodeMenu.cpp  NodeMenu.h  ObjectController.cpp  ObjectController.h  PianoRoll.cpp  PianoRoll.h  PluginContext.h  PluginEditor.cpp  PluginEditor.h  (+12 more)
Source/Audio/: AudioUIBridge.cpp  AudioUIBridge.h  EventManager.cpp  EventManager.h  NoteScheduler.cpp  NoteScheduler.h  TraversalDispatcher.cpp  TraversalDispatcher.h  TraversalLogic.cpp  TraversalLogic.h  TraversalPool.h  TraversalSession.cpp  TraversalSession.h
Source/Core/: AudioUIBridge.cpp  AudioUIBridge.h  EventManager.cpp  EventManager.h  NoteScheduler.cpp  NoteScheduler.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TraversalDispatcher.cpp  TraversalDispatcher.h  TraversalLogic.cpp  TraversalLogic.h
Source/Graph/: ArrowDuration.h  RTData.h  RTGraphBuilder.cpp  RTGraphBuilder.h  ValueTreeIdentifiers.cpp  ValueTreeIdentifiers.h  ValueTreeState.cpp  ValueTreeState.h
Source/Input/: NodeController.cpp  NodeController.h
Source/Logic/: DynamicPort.cpp  DynamicPort.h  NodeController.cpp  NodeController.h  NodeLogic.cpp  NodeLogic.h  ObjectController.cpp  ObjectController.h
Source/Node/: Counter.cpp  Counter.h  Node.cpp  Node.h  NodeArrow.cpp  NodeArrow.h  NodeBox.h  NodeCanvas.cpp  NodeCanvas.h  NodeData.cpp  NodeData.h  RelayNode.h  Traverser.cpp  Traverser.h
Source/Plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/UI/: AllowedTraversalsMenu.cpp  AllowedTraversalsMenu.h  BottomBar.cpp  BottomBar.h  ColourSelector.cpp  ColourSelector.h  CustomLookAndFeel.cpp  CustomLookAndFeel.h  CustomTextEditor.cpp  CustomTextEditor.h  DynamicEditor.cpp  DynamicEditor.h  MenuArea.cpp  MenuArea.h  MenuBar.cpp  MenuBar.h  NodeFactory.h  NodeMenu.cpp  NodeMenu.h  PianoRoll.cpp  PianoRoll.h  PopupWindow.cpp  PopupWindow.h  ResizablePanel.cpp  ResizablePanel.h  SelectionBar.cpp  SelectionBar.h  TitleBar.cpp  TitleBar.h  Titlebar.cpp  Titlebar.h  TitlebarButtons.h  TraversalDisplayMenu.cpp  TraversalDisplayMenu.h  TraversalMenu.cpp  TraversalMenu.h  TraversalMenuListener.h  TraversalRulesMenu.cpp  TraversalRulesMenu.h
Source/UI/Buttons/: ArrowTool.h  ButtonConstants.h  ButtonPane.h  ColorIntensityControl.h  ConnectorButton.h  DisplayButton.h  DisplayMenu.cpp  DisplayMenu.h  EditTraversalRulesButton.cpp  EditTraversalRulesButton.h  IconButton.h  IncrementButton.h  MenuTextButton.h  ModulatorButton.h  NodeButton.h  PaintTool.h  PaintToolSettings.h  PlayButton.h  RedoButton.h  ResetButton.h  RootRectangle.cpp  RootRectangle.h  SyncButton.h  TempoDisplay.h  TraversalFlagButton.h  UndoButton.h  UndoRedoPane.h  ValueSlider.h
Source/UI/Canvas/: ArrowManager.cpp  ArrowManager.h  AudioCommandDrainer.cpp  AudioCommandDrainer.h  DanglingArrowLayer.cpp  DanglingArrowLayer.h  DynamicPort.cpp  DynamicPort.h  NodeCanvas.cpp  NodeCanvas.h  NodeCanvasTreeListener.cpp  NodeCanvasTreeListener.h  NodeManager.cpp  NodeManager.h  PaintedCanvas.cpp  PaintedCanvas.h  ValueField.cpp  ValueField.h
Source/UI/Menus/: AllowedTraversalsMenu.cpp  AllowedTraversalsMenu.h  ColourSelector.cpp  ColourSelector.h  ItemSelector.cpp  ItemSelector.h  MenuArea.cpp  MenuArea.h  MenuBar.h  NodeMenu.cpp  NodeMenu.h  TraversalMenu.cpp  TraversalMenu.h  TraversalMenuListener.h  TraversalRulesMenu.cpp  TraversalRulesMenu.h
Source/UI/Node/: AlternativeNode.cpp  AlternativeNode.h  Arrow.cpp  Arrow.h  ArrowProgress.h  Connector.cpp  Connector.h  Counter.cpp  Counter.h  CustomTextCaret.cpp  DanglingArrow.h  Modulator.cpp  Modulator.h  Node.cpp  Node.h  NodeArrow.cpp  NodeArrow.h  NodeBox.cpp  NodeBox.h  NodeCanvas.cpp  NodeCanvas.h  NodeData.cpp  NodeData.h  NodeFactory.h  NodeTextEditor.cpp  NodeTextEditor.h  RelayNode.cpp  RelayNode.h  RootNode.cpp  RootNode.h  TraversalFlagNode.cpp  TraversalFlagNode.h  ValueEditor.cpp  ValueEditor.h
Source/UI/Theme/: ButtonState.h  CustomLookAndFeel.cpp  CustomLookAndFeel.h  CustomLookAndFeel_Buttons.cpp  CustomLookAndFeel_Menus.cpp  CustomLookAndFeel_Nodes.cpp  CustomTextCaret.cpp  CustomTextCaret.h  CustomTextEditor.cpp  CustomTextEditor.h  NodeVisual.h  Theme.cpp  Theme.h
Source/Util/: ApplicationContext.h  ComponentContext.h  NodeInfo.h  NodePosition.h  PluginContext.h  PluginModules.h  ProjectModules.h  RTData.h  ValueTreeIdentifiers.cpp  ValueTreeIdentifiers.h  ValueTreeState.cpp  ValueTreeState.h
